gcc/testsuite/gdc.test/compilable/test12567e.d
// REQUIRED_ARGS: -o-
deprecated("a" ~ "b") module fail12567;
