gcc/testsuite/gdc.test/fail_compilation/ice15855.d
// REQUIRED_ARGS: -o-

a[{for
